<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stellar Survival</string>
    <string name="action_settings">Settings</string>
    <string name="turbo">TURBO</string>
    <string name="title_activity_log_match">LogMatchActivity</string>
    <string name="match_log">Match Log</string>
    <string name="order_by">Order By</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="play">PLAY</string>
    <string name="paused">PAUSED</string>
    <string name="ranking">RANKING</string>
    <string name="resume">Resume</string>
    <string name="menu">Menu</string>
    <string name="replay">Replay</string>
    <string name="play_new">New Game</string>
    <string name="default_name">Enter a name</string>
    <string name="mode">Select a mode</string>

    <string-array name="array_order_by">
        <item>Date</item>
        <item>Score</item>
        <item>Match Name</item>
    </string-array>
    <string-array name="array_modes">
        <item>Vertical Mode</item>
        <item>Central Mode</item>
        <item>Random Mode</item>
        <item>Wave Mode</item>
    </string-array>

    <string name="title_activity_help">HelpActivity</string>
    <string name="help">Help</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="helpDescription">Description\nUse the joystick to rotate the spaceship. Tap the screen to shoot.
         Tap the right button to accelerate the ship</string>

</resources>
