<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/space_background"
    tools:context="com.example.stellarsurvival.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        
	    <Button
	        android:id="@+id/play_button"
	        android:layout_width="220dp"
	        android:layout_height="60dp"
	        android:text="@string/play"
	        android:textSize="45sp"
	        android:textColor="@color/orange"
	        android:background="@drawable/custom_button" />

	    <View
	        android:layout_width="220dp"
	        android:layout_height="20dp" />
	    
	    <Button
	        android:id="@+id/ranking_button"
	        android:layout_width="220dp"
	        android:layout_height="60dp"
	        android:text="@string/ranking"
	        android:textSize="45sp"
	        android:textColor="@color/orange"
	        android:background="@drawable/custom_button" />
	    
	    <View
	        android:layout_width="220dp"
	        android:layout_height="20dp" />
	    
	    <Button
	        android:id="@+id/help_button"
	        android:layout_width="220dp"
	        android:layout_height="60dp"
	        android:text="@string/help"
	        android:textSize="45sp"
	        android:textColor="@color/orange"
	        android:background="@drawable/custom_button" />
	    
    </LinearLayout>

</RelativeLayout>
