<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center" >

    <TextView
        android:id="@+id/titleFinishedFailDialog"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:gravity="center"
        android:background="@color/orange_trans" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center" >
        
        <Button
            android:id="@+id/playNewFinishedFail"
            android:layout_width="140dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:text="@string/play_new"
            android:textSize="27sp"
            android:textColor="@color/orange"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/play"/>
        
        <Button
            android:id="@+id/menuFinishedFail"
            android:layout_width="140dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:text="@string/menu"
            android:textSize="27sp"
            android:textColor="@color/orange"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/menu"/>
        
    </LinearLayout>
    
</LinearLayout>
