<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center" >

    <TextView
        android:id="@+id/modeDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/mode"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:gravity="center"
        android:background="@color/orange_trans" />
    
    <Spinner
        android:id="@+id/modeDialogSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:popupBackground="@color/orange_trans2">
    </Spinner>
	
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center" >
        
        <ImageButton
            android:id="@+id/playMode"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_play"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/play"/>
        
        <ImageButton
            android:id="@+id/menuMode"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_menu2"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/menu"/>
    </LinearLayout>

</LinearLayout>
