<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center" >

    <TextView
        android:id="@+id/pausedDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/paused"
        android:textColor="@color/orange"
        android:textSize="60sp"
        android:gravity="center"
        android:background="@color/orange_trans" />
	
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center" >
        
        <ImageButton
            android:id="@+id/resumeButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_play"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/play"/>
        
        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_replay"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/replay"/>
        
        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:src="@drawable/icon_menu2"
            android:background="@drawable/custom_button"
            android:contentDescription="@string/menu"/>
    </LinearLayout>
    <!--
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp" >

        <TableRow
            android:id="@+id/resumeTableRow"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="@drawable/custom_button" >
            <ImageView
               	android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:src="@drawable/icon_play">"
            </ImageView>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              	android:text="@string/resume"
              	android:textColor="@color/orange"
              	android:textSize="20sp"
              	android:gravity="center|left" >
            </TextView>
    			
        </TableRow>

        <TableRow
            android:id="@+id/menuTableRow"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="@drawable/custom_button" >
            <ImageView
               	android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:src="@drawable/icon_menu" >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              	android:text="@string/menu"
              	android:textColor="@color/orange"
              	android:textSize="20sp"
              	android:gravity="center|left" >
            </TextView>
            
        </TableRow>

        <TableRow
            android:id="@+id/restartTableRow"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="@drawable/custom_button" >
            <ImageView
               	android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
				android:src="@drawable/icon_replay" >
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              	android:text="@string/restart"
              	android:textColor="@color/orange" 
              	android:textSize="20sp"
              	android:gravity="center|left" >
            </TextView>
            
        </TableRow>

    </TableLayout>-->

</LinearLayout>
